ДЗ к уроку 16 - исправления